results/SVCOMP/0-shot/log-BinaryTree-2024_03_19_00_12_37.txt
public class BinaryTree {
  private class Node {
    int value;
    Node left;
    Node right;

    //@ invariant left != this && right != this;
    //@ invariant left != right;
    //@ invariant left == null || left.value < value;
    //@ invariant right == null || right.value > value;

    Node(int v, Node l, Node r) {
      value = v;
      left = l;
      right = r;
    }
  }

  private Node root = null;

  //@ ensures root.value == v;
  //@ ensures (\forall Node n; n != root && n != null; n.value != v);
  public void insert(int v) {
    // Method implementation
  }

  //@ requires root != null;
  //@ ensures \result == true <==> (\exists Node n; n != null; n.value == v);
  //@ ensures \result == false <==> (\forall Node n; n != null; n.value != v);
  public boolean search(int v) {
    // Method implementation
  }
}
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures root.value == v;
              ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures root.value == v;
                  ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with private visibility may not be used in a ensures clause with public visibility
  //@ ensures (\forall Node n; n != root && n != null; n.value != v);
                                    ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures (\forall Node n; n != root && n != null; n.value != v);
                                                        ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:27: error: An identifier with private visibility may not be used in a requires clause with public visibility
  //@ requires root != null;
               ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:28: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == true <==> (\exists Node n; n != null; n.value == v);
                                                                ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:29: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == false <==> (\forall Node n; n != null; n.value != v);
                                                                 ^
7 errors

